<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:checked="true"
            android:icon="@mipmap/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/menu_setting"
            android:icon="@mipmap/ic_setting"
            android:title="@string/setting" />
        <item
            android:id="@+id/menu_theme"
            android:icon="@mipmap/ic_theme"
            android:title="@string/theme" />
        <item
            android:id="@+id/menu_scans"
            android:icon="@mipmap/ic_scans"
            android:title="@string/install_manager" />
        <item
            android:id="@+id/menu_feedback"
            android:icon="@mipmap/ic_feedback"
            android:title="@string/feedback" />
        <item
            android:id="@+id/menu_updates"
            android:icon="@mipmap/ic_updates"
            android:title="@string/updates" />
        <item
            android:id="@+id/menu_about"
            android:icon="@mipmap/ic_about"
            android:title="@string/about" />
        <item
            android:id="@+id/menu_exit"
            android:icon="@mipmap/ic_exit"
            android:title="@string/exit" />
    </group>
</menu>
